--- a/runup_app/static/styles/mobile_sub.css
+++ b/runup_app/static/styles/mobile_sub.css
@@ -117,3 +117,11 @@
   /* border-radius: 4px; */
   border-top: 1px solid #e1e4e8;
 }
+
+.sale-price{
+  color: red;
+}
+
+.discount-rate{
+  color: blue;
+}
